clueTip: fixed dropShadow not appearing in edge cases. added overflow: hidden; to clueTip title
git-svn-id: http://jqueryjs.googlecode.com/svn/trunk@4541 c715fcbe-d12f-0410-84c4-316a508785bb

--- a/plugins/cluetip/jquery.cluetip.css
+++ b/plugins/cluetip/jquery.cluetip.css
@@ -2,6 +2,9 @@
 #cluetip-close img {
   border: 0;
 }
+#cluetip-title {
+  overflow: hidden;
+}
 #cluetip-title #cluetip-close {
   float: right;
   position: relative;
